--- a/index.html
+++ b/index.html
@@ -11,6 +11,41 @@
       content="width=device-width, user-scalable=no, intial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+
+    <!-- Open Graph (Facebook, Linkedin)-->
+    <meta property="op:type" content="website" />
+    <meta property="og:title" content="잔재미코딩 온라인 강의" />
+    <meta property="og:description" content="잔재미코딩 온라인 강의 리스트" />
+    <meta property="og:image" content="img/fun-coding-mark.png" />
+    <meta property="og:url" content="https://www.fun-coding.org" />
+    <meta property="og:site_name" content="html edu" />
+
+    <!-- twitter card (Twitter) -->
+    <meta name="twitter:card" content="summary" />
+    <!-- card 종류: summary, photo, player -->
+    <meta name="twitter:title" content="잔재미코딩 온라인 강의" />
+    <meta name="twitter:description" content="잔재미코딩 온라인 강의 리스트" />
+    <meta name="twitter:image" content="img/fun-coding-mark.png" />
+
+    <!-- 일반적인 fabicon 설정 -->
+    <link rel="icon" href="img/fun-coding.ico" />
+    <!-- 아이폰용 fabicon 설정 -->
+    <link rel="apple-touch-icon" href="img/fun-coding.ico" />
+    <!-- 인터넷 익스플러로용 fabicon 설정 -->
+    <link rel="short icon" type="image/x-icon" href="img/fun-coding.ico" />
+
+    <!-- css Reset -->
+    <link rel="stylesheet" href="css/nomalize.css" />
+    <!-- web font -->
+    <link
+      href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
+      rel="stylesheet"
+      type="text/css"
+    />
+
+    <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <h1>안녕하세요.</h1>
+  </body>
 </html>
