--- a/index.html
+++ b/index.html
@@ -46,11 +46,18 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!-- CSS 작명 규칙 (BEM: Block Element Modifier)-->
     <header>
       <div class="inner">
         <div class="head-container">
-          <div class="head-brand">잔재미코딩</div>
-          <div class="head-blog">잔재미코딩 블로그 모음</div>
+          <div class="head-brand">
+            <a href="https://www.fun-coding.org">잔재미코딩</a>
+          </div>
+          <div class="head-blog">
+            <a href="https://www.fun-coding.org/daveblog.html"
+              >잔재미코딩 블로그 모음</a
+            >
+          </div>
         </div>
       </div>
     </header>
