--- a/index.html
+++ b/index.html
@@ -61,7 +61,22 @@
         </div>
       </div>
     </header>
-    <section></section>
+
+    <!-- 메인 이미지 섹션 -->
+    <section class="main">
+      <div class="main-container">
+        <div class="inner">
+          <div class="title-container">
+            <div class="title">광고보다 강의에 집중합니다.</div>
+            <div class="message">
+              전자책보다 좋은 자료와 현업의 경험을 함께<br />
+              검증된 온라인 강의를 <br />
+              검증된 온라인 플랫폰에서 제공합니다.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <footer></footer>
   </body>
 </html>
