--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
     <!-- css Reset -->
     <link rel="stylesheet" href="css/nomalize.css" />
+    <!-- https://fontawesome.com/start -->
+    <script
+      src="https://kit.fontawesome.com/8178657da0.js"
+      crossorigin="anonymous"
+    ></script>
     <!-- web font -->
     <link
       href="//spoqa.github.io/spoqa-han-sans/css/SpoqaHanSansNeo.css"
@@ -72,6 +77,44 @@
               전자책보다 좋은 자료와 현업의 경험을 함께<br />
               검증된 온라인 강의를 <br />
               검증된 온라인 플랫폰에서 제공합니다.
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="inner">
+        <div class="skill-container">
+          <div class="skill">
+            <i class="fab fa-python skill-icon python-style"></i>
+            <div class="skill-title">
+              <div class="skill-name">업무 자동화</div>
+              <div class="skill-usage">크롤링/자동매매</div>
+            </div>
+          </div>
+
+          <div class="skill">
+            <i class="far fa-chart-bar skill-icon analysis-style"></i>
+            <div class="skill-title">
+              <div class="skill-name">데이터 분석</div>
+              <div class="skill-usage">데이터 분석</div>
+            </div>
+          </div>
+
+          <div class="skill">
+            <i class="fab fa-app-store-ios skill-icon ai-style"></i>
+            <div class="skill-title">
+              <div class="skill-name">AI</div>
+              <div class="skill-usage">인공지능 활용</div>
+            </div>
+          </div>
+
+          <div class="skill">
+            <i class="fab fa-vuejs skill-icon vue-style"></i>
+            <div class="skill-title">
+              <div class="skill-name">풀스택</div>
+              <div class="skill-usage">웹/앱 서비스</div>
             </div>
           </div>
         </div>
