--- a/index.html
+++ b/index.html
@@ -120,6 +120,188 @@
         </div>
       </div>
     </section>
+
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-container">
+            <div class="roadmap-title">잔재미코딩 관련 블로그 및 서적</div>
+            <div class="arrow-container">
+              <i class="fas fa-chevron-circle-left slide-prev"></i>
+              <i class="fas fa-chevron-circle-right slide-next"></i>
+            </div>
+          </div>
+          <ul class="class-list">
+            <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/blog.jpg"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <i class="far fa-bookmark class-format"></i>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    IT는 배우는 방법을 익혀야합니다.
+                  </div>
+                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                </div>
+              </div>
+            </li>
+
+            <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/art/database.jpg"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <i class="far fa-bookmark class-format"></i>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    뼛속까지 문과생이 빅데이터 개발자가 되기까지
+                  </div>
+                  <div class="class-detail">
+                    비전공자와 입문자가 IT와 프로그래밍을 익히는 전략
+                  </div>
+                </div>
+              </div>
+            </li>
+
+            <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/art/newcommer.png"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <i class="far fa-bookmark class-format"></i>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    블로그를 시작하며 - 도커?와 블로그
+                  </div>
+                  <div class="class-detail">잔재미코딩 블로그 소개</div>
+                </div>
+              </div>
+            </li>
+
+            <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/art/coding.gif"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <i class="far fa-bookmark class-format"></i>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    혹시 IT를 배워봤는데, 잘안된다면?
+                  </div>
+                  <div class="class-detail">
+                    혹시? 유튜브나 다른 강의를 한번 들어봐도 어렵기만 하다면?
+                  </div>
+                </div>
+              </div>
+            </li>
+
+            <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/art/SWTech.jpg"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <i class="far fa-bookmark class-format"></i>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    잔재미코딩 강의중, 어느 강의를 들을까? 고민이라면?
+                  </div>
+                  <div class="class-detail">
+                    (코린이편) 잔재미코딩 강의중, 어느 강의를 들을까?
+                    고민이라면?
+                  </div>
+                </div>
+              </div>
+            </li>
+
+            <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/blog.jpg"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <i class="far fa-bookmark class-format"></i>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    IT는 배우는 방법을 익혀야합니다.
+                  </div>
+                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                </div>
+              </div>
+            </li>
+
+            <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/blog.jpg"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <i class="far fa-bookmark class-format"></i>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    IT는 배우는 방법을 익혀야합니다.
+                  </div>
+                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                </div>
+              </div>
+            </li>
+
+            <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/blog.jpg"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">학습방법</div>
+                  <i class="far fa-bookmark class-format"></i>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">
+                    IT는 배우는 방법을 익혀야합니다.
+                  </div>
+                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </section>
     <footer></footer>
   </body>
 </html>
