add a tag & css cusor pointer

--- a/index.html
+++ b/index.html
@@ -133,23 +133,26 @@
           </div>
           <ul class="class-list">
             <li class="class-card">
-              <img
-                src="https://www.fun-coding.org/style/images/blog.jpg"
-                alt="잔재미코딩 블로그"
-                class="class-image"
-              />
-              <div class="class-container">
-                <div class="class-skill">
-                  <div class="class-type">학습방법</div>
-                  <i class="far fa-bookmark class-format"></i>
-                </div>
-                <div class="class-desc">
-                  <div class="class-title">
-                    IT는 배우는 방법을 익혀야합니다.
+              <a href="https://www.fun-coding.org/blog/?p=86" target="_blank">
+                <img
+                  src="https://www.fun-coding.org/style/images/blog.jpg"
+                  alt="잔재미코딩 블로그"
+                  class="class-image"
+                />
+
+                <div class="class-container">
+                  <div class="class-skill">
+                    <div class="class-type">학습방법</div>
+                    <i class="far fa-bookmark class-format"></i>
                   </div>
-                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                  <div class="class-desc">
+                    <div class="class-title">
+                      IT는 배우는 방법을 익혀야합니다.
+                    </div>
+                    <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                  </div>
                 </div>
-              </div>
+              </a>
             </li>
 
             <li class="class-card">
@@ -238,63 +241,125 @@
                 </div>
               </div>
             </li>
+          </ul>
+        </div>
+      </div>
+    </section>
 
+    <section>
+      <div class="inner">
+        <div class="roadmap-container">
+          <div class="roadmap-title-container">
+            <div class="roadmap-title">
+              데이터 분석/예측 로드맵
+              <span class="roadmap-desc"
+                >(데이터분석가 / 과학자 커리어 과정)</span
+              >
+            </div>
+            <div class="arrow-container">
+              <i class="fas fa-chevron-circle-left slide-prev"></i>
+              <i class="fas fa-chevron-circle-right slide-next"></i>
+            </div>
+          </div>
+          <ul class="class-list">
             <li class="class-card">
               <img
-                src="https://www.fun-coding.org/style/images/blog.jpg"
+                src="https://www.fun-coding.org/style/images/ljh_python.png"
                 alt="잔재미코딩 블로그"
                 class="class-image"
               />
               <div class="class-container">
                 <div class="class-skill">
-                  <div class="class-type">학습방법</div>
+                  <div class="class-type">파이썬/크롤링</div>
                   <i class="far fa-bookmark class-format"></i>
                 </div>
                 <div class="class-desc">
                   <div class="class-title">
-                    IT는 배우는 방법을 익혀야합니다.
+                    파이썬 입문과 크롤링기초 부트캠프
                   </div>
-                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                  <div class="class-detail">
+                    프로그래밍과 파이썬 기초 및 데이터를 프로그래밍으로 다루기
+                  </div>
                 </div>
               </div>
             </li>
 
             <li class="class-card">
               <img
-                src="https://www.fun-coding.org/style/images/blog.jpg"
+                src="https://www.fun-coding.org/style/images/ljh_scrapy.png"
                 alt="잔재미코딩 블로그"
                 class="class-image"
               />
               <div class="class-container">
                 <div class="class-skill">
-                  <div class="class-type">학습방법</div>
+                  <div class="class-type">크롤링 중급</div>
                   <i class="far fa-bookmark class-format"></i>
                 </div>
                 <div class="class-desc">
-                  <div class="class-title">
-                    IT는 배우는 방법을 익혀야합니다.
+                  <div class="class-title">파이썬 selenum / scrapy</div>
+                  <div class="class-detail">
+                    현존 최강 크롤링 기술과 프로그래밍 중급
                   </div>
-                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
                 </div>
               </div>
             </li>
 
             <li class="class-card">
               <img
-                src="https://www.fun-coding.org/style/images/blog.jpg"
+                src="https://www.fun-coding.org/style/images/mysql_python.png"
                 alt="잔재미코딩 블로그"
                 class="class-image"
               />
               <div class="class-container">
                 <div class="class-skill">
-                  <div class="class-type">학습방법</div>
+                  <div class="class-type">MySQL/DB</div>
                   <i class="far fa-bookmark class-format"></i>
                 </div>
                 <div class="class-desc">
-                  <div class="class-title">
-                    IT는 배우는 방법을 익혀야합니다.
+                  <div class="class-title">SQL/DB(MySQL) 기본과 활용</div>
+                  <div class="class-detail">
+                    데이터를 다루는 데이터베이스 기초와 파이썬 기반 활용
                   </div>
-                  <div class="class-detail">비전공자가 IT를 배우는 전략</div>
+                </div>
+              </div>
+            </li>
+
+            <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/pandas.png"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">pandas/plotly</div>
+                  <i class="far fa-bookmark class-format"></i>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">처음하는 파이썬 데이터 분석</div>
+                  <div class="class-detail">
+                    데이터의 전처리부터 pandas, plotly (시각화), 분석 이론까지
+                  </div>
+                </div>
+              </div>
+            </li>
+
+            <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/working.png"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
+              <div class="class-container">
+                <div class="class-skill">
+                  <div class="class-type">머신러닝</div>
+                  <i class="far fa-bookmark class-format"></i>
+                </div>
+                <div class="class-desc">
+                  <div class="class-title">처음하는 머신러닝과 통계 기본</div>
+                  <div class="class-detail">
+                    데이터 예측을 위한 머신러닝과 통계 기본
+                  </div>
                 </div>
               </div>
             </li>
