--- a/index.html
+++ b/index.html
@@ -101,11 +101,15 @@
       <div class="main-container">
         <div class="inner">
           <div class="title-container">
+            <!-- 크롬 개발자 모드에서 toogle device toolbar 선택 (왼쪽 상단 두번째 메뉴)
+              iPhone X 로 선택한 후, 최종 확인 후, 관련 코드 수정
+            -->
             <div class="title">광고보다 강의에 집중합니다</div>
             <div class="message">
-              전자책보다 좋은 자료와 현업의 경험을 함께<br />
+              전자책보다 좋은 자료와 <br />
+              현업의 경험으로<br />
               검증된 온라인 강의를<br />
-              검증된 온라인 플랫폼에서 제공합니다.
+              검증된 플랫폼에서 제공합니다<br />
             </div>
           </div>
         </div>
@@ -149,23 +153,26 @@
       <div class="inner">
         <div class="roadmap-container">
           <div class="roadmap-title-container">
-            <div class="roadmap-title">잔재미코딩 관련 블로그 및 서적</div>
+            <div class="roadmap-title">블로그 및 서적</div>
             <div class="arrow-container">
               <i class="fas fa-chevron-circle-left slide-prev"></i>
               <i class="fas fa-chevron-circle-right slide-next"></i>
             </div>
           </div>
+          <!-- HTML5 에서는 태그에 확장처리를 위한 속성으로 data-* 속성 추가
+            data-변수이름=변수값 으로 정의하고, JS 등에서 활용 가능
+          -->
           <ul class="class-list" data-position="0">
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/blog.jpg"
+                alt="잔재미코딩 블로그"
+                class="class-image"
+              />
               <a
                 href="http://school.fastcampus.co.kr/blog/all/113/"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/blog.jpg"
-                  alt="잔재미코딩 블로그"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
                     <div class="class-type">학습방법</div>
@@ -181,15 +188,15 @@
               </a>
             </li>
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/broadIT3.png"
+                alt="잔재미코딩 서적"
+                class="class-image"
+              />
               <a
                 href="http://www.yes24.com/Product/Goods/60212672?OzSrank=1"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/broadIT3.png"
-                  alt="잔재미코딩 서적"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
                     <div class="class-type">출판서적</div>
@@ -207,15 +214,15 @@
               </a>
             </li>
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/pythonbook.png"
+                alt="잔재미코딩 서적"
+                class="class-image"
+              />
               <a
                 href="hhttp://www.yes24.com/Product/Goods/43504370?OzSrank=1"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/pythonbook.png"
-                  alt="잔재미코딩 서적"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
                     <div class="class-type">출판서적</div>
@@ -231,15 +238,15 @@
               </a>
             </li>
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/linuxbook.png"
+                alt="잔재미코딩 서적"
+                class="class-image"
+              />
               <a
                 href="http://www.yes24.com/Product/Goods/1461768?OzSrank=8"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/linuxbook.png"
-                  alt="잔재미코딩 서적"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
                     <div class="class-type">출판서적</div>
@@ -255,15 +262,15 @@
               </a>
             </li>
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/linuxbook2.png"
+                alt="잔재미코딩 서적"
+                class="class-image"
+              />
               <a
                 href="http://www.yes24.com/Product/Goods/3369009"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/linuxbook2.png"
-                  alt="잔재미코딩 서적"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
                     <div class="class-type">출판서적</div>
@@ -300,17 +307,20 @@
               <i class="fas fa-chevron-circle-right slide-next"></i>
             </div>
           </div>
+          <!-- HTML5 에서는 태그에 확장처리를 위한 속성으로 data-* 속성 추가
+            data-변수이름=변수값 으로 정의하고, JS 등에서 활용 가능
+          -->
           <ul class="class-list" data-position="0">
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/ljh_python.png"
+                alt="잔재미코딩 강의"
+                class="class-image"
+              />
               <a
                 href="https://www.inflearn.com/course/python-crawling-basic?inst=71325257"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/ljh_python.png"
-                  alt="잔재미코딩 강의"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
                     <div class="class-type">파이썬/크롤링</div>
@@ -328,15 +338,15 @@
               </a>
             </li>
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/ljh_scrapy.png"
+                alt="잔재미코딩 강의"
+                class="class-image"
+              />
               <a
                 href="https://www.inflearn.com/course/Crawling-Scrapy-Selenium?inst=469beff7"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/ljh_scrapy.png"
-                  alt="잔재미코딩 강의"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
                     <div class="class-type">크롤링중급</div>
@@ -352,18 +362,18 @@
               </a>
             </li>
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/mysql_python.png"
+                alt="잔재미코딩 강의"
+                class="class-image"
+              />
               <a
                 href="https://www.inflearn.com/course/SQL-DB-MYSQL-파이썬-데이터분석?inst=7abfe3b0"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/mysql_python.png"
-                  alt="잔재미코딩 강의"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
-                    <div class="class-type">MySQL/데이터베이스</div>
+                    <div class="class-type">MySQL/DB</div>
                     <div class="class-format">온라인 강의</div>
                   </div>
                   <div class="class-desc">
@@ -376,15 +386,15 @@
               </a>
             </li>
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/pandas.png"
+                alt="잔재미코딩 강의"
+                class="class-image"
+              />
               <a
                 href="https://www.inflearn.com/course/파이썬-데이터분석-전처리-판다스-시각화?inst=65936339"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/pandas.png"
-                  alt="잔재미코딩 강의"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
                     <div class="class-type">pandas/plotly</div>
@@ -400,12 +410,12 @@
               </a>
             </li>
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/working.png"
+                alt="잔재미코딩 강의"
+                class="class-image"
+              />
               <a href="https://www.fun-coding.org" target="_blank">
-                <img
-                  src="https://www.fun-coding.org/style/images/progressing_open2.png"
-                  alt="잔재미코딩 강의"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
                     <div class="class-type">머신러닝</div>
@@ -439,18 +449,18 @@
           </div>
           <ul class="class-list" data-position="0">
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/cs_os.png"
+                alt="잔재미코딩 컴퓨터 공학 강의"
+                class="class-image"
+              />
               <a
                 href="https://www.fastcampus.co.kr/dev_online_cs/"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/cs_os.png"
-                  alt="잔재미코딩 컴퓨터 공학 강의"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
-                    <div class="class-type">운영체제, 시스템소프트웨어</div>
+                    <div class="class-type">컴퓨터 공학</div>
                     <div class="class-format">온라인 강의</div>
                   </div>
                   <div class="class-desc">
@@ -463,15 +473,15 @@
               </a>
             </li>
             <li class="class-card">
+              <img
+                src="https://www.fun-coding.org/style/images/algorithm.png"
+                alt="잔재미코딩 알고리즘 강의"
+                class="class-image"
+              />
               <a
                 href="https://www.fastcampus.co.kr/dev_online_algo/"
                 target="_blank"
               >
-                <img
-                  src="https://www.fun-coding.org/style/images/algorithm.png"
-                  alt="잔재미코딩 알고리즘 강의"
-                  class="class-image"
-                />
                 <div class="class-container">
                   <div class="class-skill">
                     <div class="class-type">자료구조와 알고리즘</div>
@@ -507,6 +517,6 @@
     </footer>
     <a id="backtotop"></a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.24.0/babel.js"></script>
-    <script src="js/main.js"></script>
+    <script type="text/babel" src="js/main.js"></script>
   </body>
 </html>
